--- a/index.html
+++ b/index.html
@@ -1,106 +1,41 @@
-<!DOCTYPE html>
 <html>
 <head>
     <title>.helaney</title>
-    <link rel="icon" href="images/ыыы анимэшка.jpg" type="image/x-icon">
-    <style>
-        body {
-            background: white;
-            background-size: 2000% auto;
-            animation: gradient 30s ease infinite;
-        }
-
-        .content {
-            text-align: center;
-        }
-
-        .avatar-container {
-            display: flex;
-            align-items: center;
-        }
-
-        .text {
-            margin-top: 120px;
-            margin-left: 120px;
-            display: flex;
-            flex-wrap: wrap;
-            align-items: flex-start;
-        }
-
-        .avatar {
-            flex: 1;
-            max-width: 128px;
-            text-align: center;
-            margin-right: 20px;
-        }
-
-        .text2 {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: flex-start;
-            margin-top: 120px;
-            margin-left: 750px;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .avatar img {
-            width: 100%;
-            border-radius: 100px;
-            overflow: hidden;
-        }
-
-        .text-right {
-            flex: 2;
-            margin-top: -35px;
-            margin-left: 20px;
-        }
-
-        h1 {
-            margin-top: 50px;
-            margin-bottom: 20px;
-        }
-
-        .buttons {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px; 
-        }
-
-        .button {
-            background-color: #a83fff;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 16px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="icon" href="assets/images/ыыы анимэшка.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="assets/styles/index.css">
 </head>
 <body>
     <div class="avatar-container">
-        <div class="text">
-            <div class="avatar">
-                <img src="images/ыыы анимэшка.jpg" alt="Helaney">
+        <div class="avatar">
+            <img src="assets/images/ыыы анимэшка.jpg" alt="Helaney">
+        </div>
+        <div class="text-right">
+            <h1>Здравствуйте! Я - Helaney.</h1>
+            <h2>Погрузитесь в мир творчества и вдохновения вместе с нами!</h2>
+            <div class="buttons">
+                <a href="https://t.me/hhelaneyy" class="button">Telegram</a>
+                <a href="https://discord.com/users/386439272455995394" class="button">Discord</a>
+                <a href="https://github.com/hhelaneyy" class="button">Github</a>
             </div>
-            <div class="text-right">
-                <font size="5" color="#dc94f5">
-                    <h1>Здравствуйте! Я - Helaney.</h1>
-                </font>
-                <h2>Погрузитесь в мир творчества и вдохновения вместе с нами!</h2>
-                <div class="buttons">
-                    <a href="https://t.me/hhelaneyy" class="button">Telegram</a>
-                    <a href="https://discord.com/users/386439272455995394" class="button">Discord</a>
+        </div>
+
+        <div class="panel-container">
+            <div class="panel">
+                <div class="panel-content">
+                    <img src="assets/images/pixel.png" alt="Pixel">
+                    <span><h3>Pixel</h3></span>
+                </div>
+                <div class="panel-buttons">
+                    <a href="https://discord.com/oauth2/authorize?client_id=1211230526204284938&permissions=8&scope=bot" class="button">Добавить на сервер</a>
+                </div>
+            </div>
+            <div class="panel">
+                <div class="panel-content">
+                    <span></span>
+                </div>
+                <div class="panel-buttons">
                 </div>
             </div>
         </div>
-    </div>
 </body>
 </html>
