газон косить надо...

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="panel-buttons">
                     <a href="https://discord.com/oauth2/authorize?client_id=1211230526204284938&permissions=8&scope=bot" class="button">Добавить на сервер</a>
-                    <a href="" class="button">Сайт бота (не робит)</a>
+                    <a href="" class="button" onclick="alert('Сайт ещё не доступен.')">Сайт бота</a>
                 </div>
             </div>
             <div class="panel">
@@ -35,6 +35,7 @@
                     <span></span>
                 </div>
                 <div class="panel-buttons">
+                    <a href="" class="button" onclick="alert('Здесь ничего нет. Кроме безмерной пустоты космоса...')">Какая-то кнопка</a>
                 </div>
             </div>
         </div>
