добавил сайт пихель

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="panel-buttons">
                     <a href="https://discord.com/oauth2/authorize?client_id=1211230526204284938&permissions=8&scope=bot" class="button">Добавить на сервер</a>
-                    <a href="" class="button" onclick="alert('Сайт ещё не доступен.')">Сайт бота</a>
+                    <a href="https://pixel-developer-team.github.io/pixel.github.io/" class="button">Сайт бота</a>
                 </div>
             </div>
             <div class="panel">
