--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Helaney">
+    <meta name="image" content="assets/images/ыыы анимэшка.jpg">
+    <meta property="og:image:type" content="image/png">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>.helaney</title>
     <link rel="icon" href="assets/images/ыыы анимэшка.jpg" type="image/x-icon">
     <link rel="stylesheet" href="assets/styles/index.css">
