--- a/index.html
+++ b/index.html
@@ -28,27 +28,22 @@
         </div>
     </div>
 
-    <!--
-        Еще раз засунешь контейнер в контейнер я тебе руки отпилю 🥰
-    -->
-
     <div class="panel-container">
         <div class="panel">
             <div class="panel-content">
-                <img src="assets/images/pixel.png" alt="Pixel">
+                <img src="assets/images/Йоро.png" alt="Yoro">
                 <span>
-                    <h3>Pixel</h3>
+                    <h3>Yoro</h3>
                 </span>
             </div>
             <div class="panel-buttons">
-                <a href="https://discord.com/oauth2/authorize?client_id=1211230526204284938&permissions=8&scope=bot"
+                <a onclick="alert('Ошибка, бот ещё в разработке.')"
                     class="button">Добавить на сервер</a>
                 <a href="https://pixel-developer-team.github.io/pixel.github.io/" class="button">Сайт бота</a>
             </div>
         </div>
         <div class="panel">
             <div class="panel-content"></div>
-            <!--хорошо, как скжешь-->
             <div class="panel-buttons">
                 <a href="" class="button"
                     onclick="alert('Здесь ничего нет. Кроме безмерной пустоты космоса...')">Какая-то кнопка</a>
